--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.77.9",
+    "@react-three/fiber": "^8.13.4",
+    "i": "^0.3.7",
+    "npm": "^9.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.154.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
